feat: add function pedidos(order)
